# zedisql

./: GEMINI.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: TabManager.test.ts  main.ts  sqlKeywords.ts  styles.css  test.setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
